# fipav_tracker_bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  schema.sql
src/: PeriodicScanner.py  db_updater.py  main.py  standing_manager.py  team_info_manager.py
src/db/: crud.py  models.py  user_state.py
src/handlers/: Artiglio.py  BaseHandler.py  artiglio.py  menu.py
src/scapers/: matches_and_rankings.py
src/scrapers/: base_scraper.py  match_details.py  matches_rankings.py
